Use Kotlin Pair instead.